<resources>
    <string name="app_name">messager</string>
    <string name="sing_in">Войти</string>
    <string name="sing_up">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="make_reg">Зарегистрироваться</string>
    <string name="preference_file_key">company.my.messager.PREFERENCE_FILE_KEY</string>
    <string name="SAVE_KEY">isSaved</string>
    <string name="SING_IN_ERROR_EMPTY">Ошибка входа(пустая форма)</string>
    <string name="SING_IN_ERROR_NO_NAME">Неверный логин или пароль</string>
</resources>
